@@ -1115,6 +1115,9 @@ id|ieee1284_info
 op_star
 id|info
 suffix:semicolon
+r_int
+id|ret
+suffix:semicolon
 r_if
 c_cond
 (paren
@@ -1166,10 +1169,22 @@ id|err
 suffix:semicolon
 )brace
 )brace
+id|ret
+op_assign
 id|parport_claim_or_block
 (paren
 id|pp-&gt;pdev
 )paren
+suffix:semicolon
+r_if
+c_cond
+(paren
+id|ret
+OL
+l_int|0
+)paren
+r_return
+id|ret
 suffix:semicolon
 id|pp-&gt;flags
 op_or_assign
