@@ -2882,13 +2882,31 @@ c_cond
 id|dev-&gt;waiting
 )paren
 (brace
-id|sleep_on
-c_func
+id|interruptible_sleep_on
 (paren
 op_amp
 id|dev-&gt;wait_q
 )paren
 suffix:semicolon
+r_if
+c_cond
+(paren
+id|signal_pending
+(paren
+id|current
+)paren
+)paren
+(brace
+id|restore_flags
+(paren
+id|flags
+)paren
+suffix:semicolon
+r_return
+op_minus
+id|EINTR
+suffix:semicolon
+)brace
 id|r
 op_assign
 l_int|1
@@ -3125,7 +3143,7 @@ op_amp
 id|pd-&gt;wait_q
 )paren
 )paren
-id|wake_up
+id|wake_up_interruptible
 c_func
 (paren
 op_amp
